testing/Travis/testcases/TypeChecker/shouldPass/CompositionISA_EndoSubtype.adl
CONTEXT CompositionISA_EndoSubtype IN ENGLISH

PURPOSE CONTEXT CompositionISA_EndoSubtype
{+ This test must succeed because meet(A,A) = A exists (exact match). +}

CLASSIFY A ISA B

RELATION r[A*A]
RELATION s[A*Z]
RELATION result[A*Z]

RULE testCompositionISA: result = r;s

ENDCONTEXT
